--- a/Untitled4.ipynb
+++ b/Untitled4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOL7njuwPdW4t0bAMZLl/iV",
+      "authorship_tag": "ABX9TyPen5ni2leVp19wjZqiao2y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,6 +49,332 @@
         "import numpy as np\n",
         "x=np.array([1,2,3])\n",
         "print(x)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "x=np.array([1,2,3])\n",
+        "print(x)\n",
+        "b=np.append(x,[4,5,6])\n",
+        "print(b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "L7LxGp6JlK_4",
+        "outputId": "7dc970c6-c272-4eda-eef7-957483612d57"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1 2 3]\n",
+            "[1 2 3 4 5 6]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "x=np.array([1,2,3])\n",
+        "print(x)\n",
+        "b=np.delete(x,2)\n",
+        "print(b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ocEntQIPlnJs",
+        "outputId": "e3e37c5f-e5be-4a13-8c71-44f29d6d3eb8"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1 2 3]\n",
+            "[1 2]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x=np.array([[1,2,3],[4,5,6]])\n",
+        "print(x)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DGzuOH1gj7oh",
+        "outputId": "0d975188-2be8-4b7f-dbe6-95d0a8b3bd18"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[1 2 3]\n",
+            " [4 5 6]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x=np.arange(10,30,2)\n",
+        "print(x)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "i342FD2pkbGh",
+        "outputId": "8eb3d886-46f2-4abc-8c70-8df913ad834f"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[10 12 14 16 18 20 22 24 26 28]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "b=np.array([4,7,4,5,7,3,8,2])\n",
+        "b[b>4]=-1\n",
+        "print(b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FqSQglJ9mIl4",
+        "outputId": "863f26ef-dc87-4866-d210-30ac7d14d301"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[ 4 -1  4 -1 -1  3 -1  2]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=np.array([20,30,40,50])\n",
+        "b=np.arange(4)\n",
+        "print(b)\n",
+        "print(a)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WO9tC1ySm-cy",
+        "outputId": "4c16b2ea-459c-41f9-ecf8-416a3b08480d"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0 1 2 3]\n",
+            "[20 30 40 50]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "a=np.array([20,30,40,50])\n",
+        "b=np.arange(4)\n",
+        "print(a+b)\n",
+        "print(a-b)\n",
+        "print(a*b)\n",
+        "print(a/b)\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_EtlFSrOnhqa",
+        "outputId": "9744950a-b362-4d38-8ab5-027a69365ac3"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[20 31 42 53]\n",
+            "[20 29 38 47]\n",
+            "[  0  30  80 150]\n",
+            "[        inf 30.         20.         16.66666667]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-23-20cdcc99689d>:6: RuntimeWarning: divide by zero encountered in true_divide\n",
+            "  print(a/b)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=np.arange(10)**2\n",
+        "print(a)\n",
+        "print(a[4])\n",
+        "print(a[1:8])\n",
+        "print(a[-1])\n",
+        "print(a[-5:-1])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ShuiIOyuoE8g",
+        "outputId": "f11589f6-2634-40ac-d69d-94507a1b8e3a"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[ 0  1  4  9 16 25 36 49 64 81]\n",
+            "16\n",
+            "[ 1  4  9 16 25 36 49]\n",
+            "81\n",
+            "[25 36 49 64]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=np.arange(12).reshape(4,3)**2\n",
+        "print(a)\n",
+        "print(a[0:0])\n",
+        "print(a[1:3,1:2])\n",
+        "print(a[0:3,0:2])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dUV0Mks3pZTs",
+        "outputId": "27e3e4ca-a1a8-418d-a9ec-c9306dcf1ee9"
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[  0   1   4]\n",
+            " [  9  16  25]\n",
+            " [ 36  49  64]\n",
+            " [ 81 100 121]]\n",
+            "[]\n",
+            "[[16]\n",
+            " [49]]\n",
+            "[[ 0  1]\n",
+            " [ 9 16]\n",
+            " [36 49]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=np.arange(10,30,2).reshape(2,5)**2\n",
+        "print(a)\n",
+        "for i in a:\n",
+        "    print(i-50)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XL7VmFpyr9SQ",
+        "outputId": "8214eea2-4033-4b50-c97a-07a7bd588760"
+      },
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[100 144 196 256 324]\n",
+            " [400 484 576 676 784]]\n",
+            "[ 50  94 146 206 274]\n",
+            "[350 434 526 626 734]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a=np.floor(10*np.random.random((3,4)))\n",
+        "print(a)\n",
+        "print(a.T)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "osqc6jSztMUA",
+        "outputId": "ab4a723b-6b6d-4544-a580-2d24dcd37225"
+      },
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[6. 0. 0. 4.]\n",
+            " [4. 5. 2. 6.]\n",
+            " [8. 7. 0. 8.]]\n",
+            "[[6. 4. 8.]\n",
+            " [0. 5. 7.]\n",
+            " [0. 2. 0.]\n",
+            " [4. 6. 8.]]\n"
+          ]
+        }
       ]
     }
   ]
